--- a/app/templates/stocks/global_dedicated.html
+++ b/app/templates/stocks/global_dedicated.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="card bg-warning text-white">
+            <div class="card bg-warning text-dark">
                 <div class="card-body text-center">
                     <h4>ÅPEN</h4>
                     <small>US Markeder</small>
