--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-white bg-warning">
+                    <div class="card text-dark bg-warning">
                         <div class="card-body">
                             <h5 class="card-title">Kryptovaluta</h5>
                             <p class="card-text">{{ crypto|length }} valutaer</p>
