--- a/app/templates/demo.html
+++ b/app/templates/demo.html
@@ -212,7 +212,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <div class="d-flex align-items-center">
-                                <div class="bg-warning text-white rounded-circle p-2 me-3">
+                                <div class="bg-warning text-dark rounded-circle p-2 me-3">
                                     <i class="bi bi-funnel"></i>
                                 </div>
                                 <div>
